# flagd-ofrep-cf-worker

./: .eslintrc.json  .gitignore  .gitmodules  .lintstagedrc.json  .prettierignore  .release-please-manifest.json  AGENTS.md  README.md  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  release-please-config.json  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml  release-please.yml
.opencode/plans/: 09-align-tooling-with-js-sdk.md
.plans/: 01-setup-and-js-worker.md  02-rust-worker-research.md  03-cloudflare-workers-challenges.md  04-flagd-core-workers-compatibility-plan.md  05-rust-worker-implementation-plan.md  06-benchmark-plan.md  07-deploy-ofrep-test-workers.md  08-js-only-refocus.md  09-r2-flag-source.md  js-only_repo_cleanup_e990df87.plan.md
benchmarks/: README.md
benchmarks/flags/: benchmark-flags.json
benchmarks/k6/: bulk-evaluation.js  config.js
docs/: rust-wasm-approaches.md
examples/: README.md
examples/deno-deploy/: README.md  deno.json  flags.json  main.ts  package.json
examples/fastly-compute/: README.md  fastly.toml  package.json  tsconfig.json
examples/js-worker/: package.json  tsconfig.json  vitest.config.mts  wrangler.toml
examples/rust-worker/: Cargo.toml  wrangler.toml
examples/rust-worker-forking/: Cargo.toml  wrangler.toml
examples/rust-worker-forking/src/: lib.rs
examples/rust-worker/src/: lib.rs
examples/vercel-edge/: README.md  package.json  tsconfig.json  (+1 more)
scripts/: patch-flagd-core.js  release-smoke-test.js  smokeOfrep.mjs  validate-npm-artifact.mjs
shared/: test-flags.json
(+10 files in other folders)
