[package]
name = "rust-worker-forking-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# OFREP handler package using forking-flagd-evaluator
rust-ofrep-worker-forking = { path = "../../packages/rust-ofrep-worker-forking" }

# Cloudflare Workers runtime
worker = "0.7"

# Serialization
serde_json = "1.0"

# Console logging for debugging
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
