[package]
name = "rust-worker-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# OFREP handler package
rust-ofrep-worker = { path = "../../packages/rust-ofrep-worker" }

# Cloudflare Workers runtime
worker = "0.7"

# Serialization
serde_json = "1.0"

# Console logging for debugging
console_error_panic_hook = "0.1"

# Use getrandom with js feature for WASM
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
